--- a/index.html
+++ b/index.html
@@ -3,78 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Time tracking dashboard</title>
-
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="/normalize.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  <article>
+    <section>
+      <img src="/images/image-jeremy.png" alt="Photo De Jeremy">
+      <p>Report for</p>
+      <h1>Jeremy Robson</h1>
 
-  Report for
-  Jeremy Robson
+      <a href="">Daily</a>
+      <a href="">Weekly</a>
+      <a href="">Monthly</a>
+    </section>
 
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-
-  
+    <section>
+      <h2>Work</h2>
+          5hrs <!-- daily -->
+          Previous - 7hrs <!-- daily -->
+          32hrs <!-- weekly -->
+          Previous - 36hrs <!-- weekly -->
+          103hrs <!-- monthly -->
+          Previous - 128hrs <!-- monthly -->
+    </section>
+    <section>
+          <h2>Play</h2>
+          1hr <!-- daily -->
+          Previous - 2hrs <!-- daily -->
+          10hrs <!-- weekly -->
+          Previous - 8hrs <!-- weekly -->
+          23hrs <!-- monthly -->
+          Previous - 29hrs <!-- monthly -->
+    </section>
+    <section>
+          <h2>Study</h2>
+          0hrs <!-- daily -->
+          Previous - 1hr <!-- daily -->
+          4hrs <!-- weekly -->
+          Previous - 7hrs <!-- weekly -->
+          13hrs <!-- monthly -->
+          Previous - 19hrs <!-- monthly -->
+    </section>
+    <section>
+          <h2>Exercise</h2>
+          1hr <!-- daily -->
+          Previous - 1hr <!-- daily -->
+          4hrs <!-- weekly -->
+          Previous - 5hrs <!-- weekly -->
+          11hrs <!-- monthly -->
+          Previous - 18hrs <!-- monthly -->
+    </section>
+    <section>
+          <h2>Social</h2>
+          1hr <!-- daily -->
+          Previous - 3hrs <!-- daily -->
+          5hrs <!-- weekly -->
+          Previous - 10hrs <!-- weekly -->
+          21hrs <!-- monthly -->
+          Previous - 23hrs <!-- monthly -->
+    </section>
+    <section>
+          <h2>Self Care</h2>
+          0hrs <!-- daily -->
+          Previous - 1hr <!-- daily -->
+          2hrs <!-- weekly -->
+          Previous - 2hrs <!-- weekly -->
+          7hrs <!-- monthly -->
+          Previous - 11hrs <!-- monthly -->
+    </section>
+  </article>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <p>Challenge by <a rel="noopener" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by Gwen Mesmacre.</p>
   </div>
 </body>
 </html>
