--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="work">
       <div class="title">
         <p>Work</p>
-        <img src="./images/icon-ellipsis.svg" alt="..." >
+        <a href="#"><img src="./images/icon-ellipsis.svg" alt="..." ></a>
       </div>
         <div class="work-daily">
         <h2>5hrs</h2><span>Previous</span>-<span>7hrs</span> <!-- daily --> 
@@ -43,7 +43,7 @@
       <div>
         <div>
           <p>Play</p>
-          <img src="./images/icon-play.svg" alt="...">
+          <a href="#"><img src="./images/icon-play.svg" alt="..."></a>
         </div>
         <div class="play-daily">
           <h2>1hr</h2><span>Previous</span>-<span>2hrs</span>
