--- a/index.html
+++ b/index.html
@@ -8,56 +8,38 @@
   <meta name="description" content="creation of a Time tracking dashboard in Front-end from a project on the Front-end Mentor website.">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/javaScript.js" type="module" defer></script>
+  <script src="./js/javaScript.js" type="module" async></script>
 </head>
 <body>
   <article>
     <header id="profil">
-        <img src="./images/image-jeremy.png" alt="Photo De Jeremy">
-        <p>Report for</p>
-        <h1>Jeremy Robson</h1>
-      <div class="bottom-button">
+      <div id="profil_main">
+          <img class="img_profil" src="./images/image-jeremy.png" alt="Photo De Jeremy">
+          <p>Report for</p>
+          <h1>Jeremy Robson</h1>
+      </div>
         <button id="button_daily" type="button">Daily</button>
         <button id="button_weekly" type="button">Weekly</button>
         <button id="button_monthly" type="button">Monthly</button>
-      </div>
     </header>
     <section id="work">
       <div class="title">
         <p class="title_Activity"></p>
-        <img src="./images/icon-ellipsis.svg" alt="..." >
+        <img src="./images/icon-ellipsis.svg" alt="...">
       </div>
-        <div class="work_daily">
-        <h2 class="daily_current display_daily"></h2>
-        <span>Previous</span>-<span class="daily_previous display_daily"></span>
+        <div class="work">
+        <h2 class="current"></h2>
+        <span class="previous"></span>
         </div>
-        <div id="work_weekly">
-          <h2 class="weekly_current display_weekly"></h2>
-          <span>Previous</span>-<span class="weekly_previous display_weekly"></span>
-        </div>
-        <div class="work_monthly">
-          <h2 class="monthly_current display_monthly"></h2>
-          <span>Previous</span>-<span class="monthly_previous display_monthly"></span>
-        </div>    
     </section>
     <section id="play">
       <div>
-        <div>
-          <p class="title_Activity"></p>
-          <img src="./images/icon-play.svg" alt="...">
-        </div>
-        <div class="play_daily">
-          <h2 class="daily_current display_daily"></h2>
-          <span>Previous</span>-<span class="daily_previous display_daily"></span>
-        </div>
-        <div class="play_weekly">
-          <h2 class="weekly_current display_weekly"></h2>
-          <span>Previous</span>-<span class="weekly_previous display_weekly"></span>
-        </div>
-        <div class="play_monthly">
-          <h2 class="monthly_current display_monthly"></h2>
-          <span>Previous</span>-<span class="monthly_previous display_monthly"></span>
-        </div>
+        <p class="title_Activity"></p>
+        <img src="./images/icon-play.svg" alt="...">
+      </div>
+      <div class="play">
+        <h2 class="current"></h2>
+        <span class="previous"></span>
       </div>    
     </section>
     <section id="study">
@@ -65,17 +47,9 @@
         <p class="title_Activity"></p>
         <img src="./images/icon-study.svg" alt="...">
       </div>
-      <div class="study_daily">
-        <h2 class="daily_current display_daily"></h2>
-        <span>Previous</span>-<span class="daily_previous display_daily"></span>
-      </div>
-      <div class="study-weekly">
-        <h2 class="weekly_current display_weekly"></h2>
-        <span>Previous</span>-<span class="weekly_previous display_weekly"></span>
-      </div>
-      <div class="study-monthly">
-        <h2 class="monthly_current display_monthly"></h2>
-        <span>Previous</span>-<span class="monthly_previous display_monthly"></span>
+      <div class="study">
+        <h2 class="current"></h2>
+        <span class="previous"></span>
       </div>
     </section>
     <section id="exercise">
@@ -83,17 +57,9 @@
         <p class="title_Activity"></p>
         <img src="./images/icon-exercise.svg" alt="..." >
       </div>
-      <div class="exercise-daily">
-        <h2 class="daily_current display_daily"></h2>
-        <span>Previous</span>-<span class="daily_previous display_daily"></span>
-      </div>
-      <div class="exercise-weekly">
-        <h2 class="weekly_current display_weekly"></h2>
-        <span>Previous</span>-<span class="weekly_previous display_weekly"></span>
-      </div>
-      <div class="exercise-monthly">
-        <h2 class="monthly_current display_monthly"></h2>
-        <span>Previous</span>-<span class="monthly_previous display_monthly"></span>
+      <div class="exercise">
+        <h2 class="current"></h2>
+        <span class="previous"></span>
       </div>
     </section>
     <section id="social">
@@ -101,17 +67,9 @@
         <p class="title_Activity"></p>
         <img src="./images/icon-social.svg" alt="...">
       </div>
-      <div class="social-daily">
-        <h2 class="daily_current display_daily"></h2>
-        <span>Previous</span>-<span class="daily_previous display_daily"></span>
-      </div>
-      <div class="social-weekly">
-        <h2 class="weekly_current display_weekly"></h2>
-        <span>Previous</span>-<span class="weekly_previous display_weekly"></span>
-      </div>
-      <div class="social-monthly">
-        <h2 class="monthly_current display_monthly"></h2>
-        <span>Previous</span>-<span class="monthly_previous display_monthly"></span>
+      <div class="social">
+        <h2 class="current"></h2>
+        <span class="previous"></span>
       </div>
     </section>
     <section id="selfcare">
@@ -119,17 +77,9 @@
         <p class="title_Activity"></p>
         <img src="./images/icon-self-care.svg" alt="...">
       </div>
-      <div class="selfcare-daily">
-        <h2 class="daily_current display_daily"></h2>
-        <span>Previous</span>-<span class="daily_previous display_daily"></span>
-      </div>
-      <div class="selfcare-weekly">
-        <h2 class="weekly_current display_weekly"></h2>
-        <span>Previous</span>-<span class="weekly_previous display_weekly"></span>
-      </div>
-      <div class="selfcare-monthly">
-        <h2 class="monthly_current display_monthly"></h2>
-        <span>Previous</span>-<span class="monthly_previous display_monthly"></span>
+      <div class="selfcare">
+        <h2 class="current"></h2>
+        <span class="previous"></span>
       </div>
     </section>
   </article>
