add style for mobile modif index.html for style modif function for add hours

--- a/index.html
+++ b/index.html
@@ -14,70 +14,62 @@
   <article>
     <header id="profil">
       <div id="profil_main">
-          <img class="img_profil" src="./images/image-jeremy.png" alt="Photo De Jeremy">
-          <p>Report for</p>
-          <h1>Jeremy Robson</h1>
+        <img class="img_profil" src="./images/image-jeremy.png" alt="Photo De Jeremy">
+        <div class="content_information">
+          <p class="report">Report for</p>
+          <h1 class="header_name">Jeremy Robson</h1>
+        </div>
       </div>
-        <button id="button_daily" type="button">Daily</button>
-        <button id="button_weekly" type="button">Weekly</button>
-        <button id="button_monthly" type="button">Monthly</button>
+      <div id="button">
+        <button id="button_daily" class="button" type="button">Daily</button>
+        <button id="button_weekly" class="button" type="button">Weekly</button>
+        <button id="button_monthly" class="button" type="button">Monthly</button>
+      </div>
     </header>
     <section id="work">
-      <div class="title">
+      <div class="content">
         <p class="title_Activity"></p>
-        <img src="./images/icon-ellipsis.svg" alt="...">
-      </div>
-        <div class="work">
+        <img class="img_content" src="./images/icon-ellipsis.svg" alt="...">
         <h2 class="current"></h2>
         <span class="previous"></span>
-        </div>
+      </div>
     </section>
     <section id="play">
-      <div>
+      <div class="content">
         <p class="title_Activity"></p>
-        <img src="./images/icon-play.svg" alt="...">
-      </div>
-      <div class="play">
+        <img class="img_content" src="./images/icon-ellipsis.svg" alt="...">
         <h2 class="current"></h2>
         <span class="previous"></span>
       </div>    
     </section>
     <section id="study">
-      <div>
+      <div class="content">
         <p class="title_Activity"></p>
-        <img src="./images/icon-study.svg" alt="...">
-      </div>
-      <div class="study">
+        <img class="img_content" src="./images/icon-ellipsis.svg" alt="...">
         <h2 class="current"></h2>
         <span class="previous"></span>
       </div>
     </section>
     <section id="exercise">
-      <div>
+      <div class="content">
         <p class="title_Activity"></p>
-        <img src="./images/icon-exercise.svg" alt="..." >
-      </div>
-      <div class="exercise">
+        <img class="img_content" src="./images/icon-ellipsis.svg" alt="..." >
         <h2 class="current"></h2>
         <span class="previous"></span>
       </div>
     </section>
     <section id="social">
-      <div>
+      <div class="content">
         <p class="title_Activity"></p>
-        <img src="./images/icon-social.svg" alt="...">
-      </div>
-      <div class="social">
+        <img class="img_content" src="./images/icon-ellipsis.svg" alt="...">
         <h2 class="current"></h2>
         <span class="previous"></span>
       </div>
     </section>
     <section id="selfcare">
-      <div>
+      <div class="content">
         <p class="title_Activity"></p>
-        <img src="./images/icon-self-care.svg" alt="...">
-      </div>
-      <div class="selfcare">
+        <img class="img_content" src="./images/icon-ellipsis.svg" alt="...">
         <h2 class="current"></h2>
         <span class="previous"></span>
       </div>
